2006-11-16  Rob Buis  <buis@kde.org>

        Reviewed by hyatt.

        Removal of unused m_styleElement.

        * dom/Node.cpp:
        (WebCore::Node::Node):
        (WebCore::Node::dump):
        * dom/Node.h:
        (WebCore::Node::isLink): should be styleElement, a bug?

2006-11-15  Adam Roben  <aroben@apple.com>

        Build fix.

        Rename the items in the ContextMenuAction enum so that they don't
        conflict with WebKit names.

        * WebCore.xcodeproj/project.pbxproj:
        * platform/ContextMenu.cpp:
        (WebCore::ContextMenu::populate):
        * platform/ContextMenu.h:
        (WebCore::):
        (WebCore::ContextMenuItem::ContextMenuItem):

2006-11-15  Adam Roben  <aroben@apple.com>

        Reviewed by Anders.

        Change m_contextMenu to an OwnPtr.

        * WebCore.xcodeproj/project.pbxproj:
        * page/ContextMenuController.cpp:
        (WebCore::ContextMenuController::handleContextMenuEvent):
        * page/ContextMenuController.h:

2006-11-15  Adam Roben  <aroben@apple.com>

        Reviewed by Anders.

        Add new ContextMenuController and ContextMenuClient classes, and move
        context menu responsibilities from Chrome and ChromeClient to them.

        * WebCore.exp:
        * WebCore.xcodeproj/project.pbxproj: Add new files to project, and
        alphabetize some others.
        * page/Chrome.cpp: Remove context menu-related code.
        * page/Chrome.h: Ditto.
        * page/ChromeClient.h:
        * page/ContextMenuClient.h: Added.
        * page/ContextMenuController.cpp: Added.
        (WebCore::ContextMenuController::ContextMenuController):
        (WebCore::ContextMenuController::~ContextMenuController):
        (WebCore::ContextMenuController::handleContextMenuEvent):
        (WebCore::ContextMenuController::contextMenuActionSelected):
        * page/ContextMenuController.h: Added.
        (WebCore::ContextMenuController::client):